@startuml
hide circle

class User {
    Id: integer {unique}
    firstName: string 
    lastName: string 
    dateOfBirth: date 
    token: string 
    salt: string 
    hash: string 
    role: string
}

class Customer {
    Id: integer {unique}
    user: string
    Subscriptions: array
    level: string
    slots: string
}

class Coach {
    Id: integer {unique}
    user: string 
    bio: string
    discipline: string
    slots: string
}

class Subscription {
    Id: integer {unique}
    name: sting
    beginningDate: date
    endDate: date
    payementMethod: string
    amountPaid: integer
}


class Slots {
    date : date
    starttHour: string
    endHour: string
    label: string
    peopleLimit: integer
    coach: string
    customers : array

}

User "0..n" -- "0..n" Customer : être
User "0..n" -- "0..n" Coach : être
Customer "1..1"--"0..n" Subscription :  possèder
Customer "0..n"--"0..n" Slot : réserver
Coach "1..1"--"1..n" Slot : manager
@enduml